external-sync-export: live findings from a second Cloud environment; soften firstspirit-cloud pointers
Verified end to end with fs-cli 4.8.9 against a FirstSpirit 5.2.261011 Cloud
server (test + export, incremental re-run):

- troubleshooting: "Wrong client build number … must be at least …"
  (VersionMismatchException after websocket connect — jar older than server),
  benign Java 25 warnings
- fs-cli-setup §3a: the launcher's bundled JRE is 21 or 25 depending on build
- export-command: .FirstSpirit/ manifest files and Global/Project/*.xml in the
  output layout; obsolete-file deletion reproduced live; -rf wrote no result
  file for export in 4.8.9 (marked [observed])
- wrapper comments no longer hard-code "JRE 21"
- SKILL.md / connection-and-auth / import-command: references to the
  unpublished firstspirit-cloud skill now point at the Cloud documentation
  (publish soften map, dead cross-skill pointer)

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>